--- a/hotel-reservation-system/src/main/resources/application.properties
+++ b/hotel-reservation-system/src/main/resources/application.properties
@@ -26,3 +26,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=public
+
+# JWT Configuration
+jwt.secret=gang-of-four-secret-key-that-long-enough
+jwt.expiration=1800000
