--- a/hotel-reservation-system/src/main/resources/application.properties
+++ b/hotel-reservation-system/src/main/resources/application.properties
@@ -26,3 +26,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=public
+
+# Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ulgangoffour@gmail.com
+#spring.mail.password=ul-gang-of-four-4
+spring.mail.password=scuq hpyt icmp jzrb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
