feat: Booking create with lock

--- a/hotel-reservation-system/src/main/resources/application.properties
+++ b/hotel-reservation-system/src/main/resources/application.properties
@@ -32,6 +32,9 @@ spring.jpa.properties.hibernate.default_schema=public
 jwt.secret=gang-of-four-secret-key-that-long-enough
 jwt.expiration=1800000
 
+# Booking Lock Configuration
+booking.lock.ttl-minutes=10
+
 # Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
