feat: Update secret redis credential variables

--- a/hotel-reservation-system/docker-compose.yml
+++ b/hotel-reservation-system/docker-compose.yml
@@ -1,14 +1,12 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   postgres:
     image: postgres:16-alpine
     container_name: hotel-postgres
     environment:
-      POSTGRES_DB: hotel_reservation
-      POSTGRES_USER: hoteluser
-      POSTGRES_PASSWORD: hotelpass
+      POSTGRES_DB: ${POSTGRES_DB:-hotel_reservation}
+      POSTGRES_USER: ${POSTGRES_USER:-hoteluser}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-hotelpass}
     ports:
       - "5432:5432"
     volumes:
@@ -25,7 +23,7 @@ services:
   redis:
     image: redis:7-alpine
     container_name: hotel-redis
-    command: redis-server --requirepass redispass
+    command: redis-server --requirepass ${REDIS_PASSWORD:-redispass}
     ports:
       - "6379:6379"
     volumes:
@@ -46,15 +44,15 @@ services:
     container_name: hotel-app
     environment:
       # Database Configuration
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/hotel_reservation
-      SPRING_DATASOURCE_USERNAME: hoteluser
-      SPRING_DATASOURCE_PASSWORD: hotelpass
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/${POSTGRES_DB:-hotel_reservation}
+      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER:-hoteluser}
+      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD:-hotelpass}
 
       # Redis Configuration
       SPRING_DATA_REDIS_HOST: redis
       SPRING_DATA_REDIS_PORT: 6379
-      SPRING_DATA_REDIS_PASSWORD: ${REDIS_PASSWORD:-}
-      SPRING_DATA_REDIS_USERNAME: ${REDIS_USERNAME:-}
+      SPRING_DATA_REDIS_PASSWORD: ${REDIS_PASSWORD:-redispass}
+      SPRING_DATA_REDIS_USERNAME: ${REDIS_USERNAME:-default}
 
       # JPA Configuration
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
