--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,40 @@
-/.idea/cs6451-team-based.iml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/vcs.xml
+HELP.md
+.gradle
+build/
+gradle/wrapper/gradle-wrapper.jar
+**/src/main/**/build/
+**/src/main/**/resources/**/*.py
+**/src/main/**/resources/**/*.python
+
+**/src/test/**/build/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
